@@ -8,7 +8,6 @@ use Module::Build;
 
 use version; our $VERSION = qv( sprintf '0.1.%d', q$Rev$ =~ /\d+/gmx );
 
-my $dist     = q(lib/HTML/FormWidgets.pm);
 my $requires = { 'perl'                    => q(5.8),
                  'version'                 => q(0.74),
                  'Class::Data::Accessor'   => q(0.04001),
@@ -17,13 +16,15 @@ my $requires = { 'perl'                    => q(5.8),
                  'Syntax::Highlight::Perl' => q(1.00),
                  'Text::ParseWords'        => q(3.22),
                  'Text::Tabs'              => q(98.112801) };
-my $build    = Module::Build->new( create_makefile_pl => q(traditional),
-                                   create_readme      => 1,
-                                   create_packlist    => 0,
-                                   dist_version_from  => $dist,
-                                   license            => q(perl),
-                                   module_name        => q(HTML::FormWidgets),
-                                   requires           => $requires );
+my $build = Module::Build->new
+   ( build_requires     => { 'version' => q(0.74) },
+     create_makefile_pl => q(traditional),
+     create_readme      => 1,
+     create_packlist    => 0,
+     dist_version_from  => q(lib/HTML/FormWidgets.pm),
+     license            => q(perl),
+     module_name        => q(HTML::FormWidgets),
+     requires           => $requires );
 
 $build->create_build_script();
 
