@@ -1,11 +1,17 @@
-2008-05-25  Peter Flanigan  <pjf@localhost>
+2008-06-02
+
+	* Build.PL:
+
+	Made version a build requirement
+
+2008-05-25
 
 	* lib/HTML/FormWidgets.pm:
 
 	Fixed invalid output from anchor and chooser widgets
 	Added POD test
 
-2008-05-19  Peter Flanigan  <pjf@localhost>
+2008-05-19
 
 	* lib/HTML/FormWidgets.pm (_render):
 
